tests/compilefail52.out
[1mtests/compilefail52.pas:4:1: [0m[1m[91merror:[0m Error D.48: Function addone must have a return value
     4 | function addone(a:integer):integer;